--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "typo3-ext/mike1",
-  "version": "1.0.0@",
+  "version": "1.0.0",
   "dist": {
     "type": "vcs",
     "url": "https://github.com/mikeschiii/typo3-ext.git"
